--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "expr-eval": "^2.0.2",
     "vue": "^3.5.13",
     "vue3-draggable-resizable": "^1.6.5"
   },
